--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "t3f5",
+  "name": "aoto",
   "description": "A Pyrogram Telegram bot to access Telegram Files via the web.",
   "keywords": [
       "telegram",
